fix yaml for cloudflareddns

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,39 +1,39 @@
-#ENC[AES256_GCM,data:v+Fn85t2WfPrWUdr+XGXYVSuPXtu3N11VuOTp1cE8SeTsGt8r3H9x0z5LwveiGi865Zn3VUqU+xpWI/opISOpMA=,iv:ah4nh8l73zOHPRKuhS0w3m8vfBXVTPGC2pvig7elN1Q=,tag:oGB1dRy6B/bu2oi1MGa1lQ==,type:comment]
-#ENC[AES256_GCM,data:yRFFpBjtGC7OOMw05vidkt610BiskcPGqnPuY+hBcW5IK/9mv9MOOt0lLpo=,iv:YKgTyzf5etah29U06zfFzZkljW+qCbmK1ppk2gy/a/4=,tag:cOmOZ7PxDEP0IbvxkXQnnA==,type:comment]
-VIP: ENC[AES256_GCM,data:tWAEIUl5xekFruEAEQ==,iv:o3oWkREE0LEfOCDaXPm92yfTBTQFOwobPn5TH1KsO+c=,tag:3nIomdJ6mMrq7KJwyL58Lw==,type:str]
-#ENC[AES256_GCM,data:DT/yvIAarIhvFC4+B5S5GC5ZuOJQV5ncZJX3,iv:tg0/QAkBOJigZnHvviTTc0jHxEOSsXXgWje0m52AEmc=,tag:E4uP+8H5E1dMxuY0S1Q8LQ==,type:comment]
-#ENC[AES256_GCM,data:wMLg91eThiZAUtTpWwWZNBA2Bi+jwzZQDhPpe0L9Y7XpII/Jq0dMinf/xTePjVYYxoLnd9ahKaYtAzyPam1GadcM7nxQDaWErKG7ilAR5UHZnqQKpcpEdN8=,iv:6quMKLrFXSjgEqKH66x+Y1vFOQPalUU3rmU2jUOk5F4=,tag:ZOm6UhO/deuWp+zmGwOJOw==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:tmtQpNy6A6xGy/qSGfQ=,iv:jSzimp2hnouftZBBcpPLsEYIrxWhQr9+gSzPN+pN4jY=,tag:0kB7M/dSWJp14W8Wi2x8iQ==,type:str]
-#ENC[AES256_GCM,data:Q5xS3w6MChZFhHWOIGecy5yIa2w8tmrWcPciZVrTUPkc6w==,iv:qEFgt/9GHZYmEldeT1rVmIcwFURQWxim6INeLGO2C50=,tag:ygjxd4MdJUdFtZIVD4qOGg==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:Tjx6tjKZs7WOqVMpHg==,iv:NBZt8xjfso1Y9JFmbX2W69wOe/tn0ZBtCV2rtPFp/B4=,tag:HJ/4ftJ7Lm/cucZJAn8vSw==,type:str]
-#ENC[AES256_GCM,data:lfkSiJMxd6u2r+1rNlU6StpfxwSaGhOgs8TJnKaEdWDrs+ChxWl/5UgeRQIsYJk=,iv:wryNhk4QYfQkuZTj1isJ7lIu0/Bt/qKdTO1h/nK4aRU=,tag:rrS2bR4/tKYrPpFaIu8Ztw==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:64ZkB20ZFnxa7FTbDTMaBvd2WNCcsTSodFyVw4EOVg==,iv:h4Nav2t4TBgqgQDMNCfryE9TsQTAujLkl1pu5DjeBWk=,tag:jnpF/zQmhR75Ii75eWGxlw==,type:str]
-#ENC[AES256_GCM,data:9akAJDhs5ybbH87J1Z6PNgm4CQAeQ3kt9QcDvwziUxOv3yIrlLCK7tPKJZIWPLMu/lQ0+Eiok8CFfds/eZMH1qNI3ZGYGULhxoSw79Ao10D3Jg==,iv:lt9Ofoy/pCyQUPuEWu0Qw3RcVW7yganTSP5rhmpQ7gU=,tag:Ms7wPy1jZt+UZRY0kp+yaQ==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:dae8dEK0Zj11F3X5GFle,iv:S1/S55swtU94WPT+14FdAs5vjm+/A7r5aHr/yJ3iH8Q=,tag:bk6Pp4DCrq/8zNZ/3+OluQ==,type:str]
-#ENC[AES256_GCM,data:QIkysaI7l2zARgSYb/nricEz1Q1Hd8N80Pl9EvVudkaF,iv:pzVT5VikOjTS/GXbCYsvyBPCfnijFCZwigVs/9TaDRE=,tag:WJZIRIPxHDinVQ3c4UkYgw==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:YlrMEBPQK37ELXvL3XkH,iv:SMHAqcBOSJBkutGFY0LUN7WN1/r6a+uBKLpjXn5N4U4=,tag:HP48eqE9/F434gznSvnZng==,type:str]
-#ENC[AES256_GCM,data:gjEwUMaQ13EyhuJPkakBjKVvbSI4tUjeL9p+L+YwO2hDqoYisL10i9XFDsBFPN3u0BRenCva7dnzzPSSGdble63miERWLEWgdmB+LJ9IC/0=,iv:7hgpYJuqikuD2bYdWL/V6fWF6pOXPappikpX9QMBVeQ=,tag:qDuhyfhkyZQi9yR09FOWQA==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:KmLJ+lK9FD5UmFvOhJil,iv:IvqTn93s+oSyfe/2J4drH1ZYnRQhybm4oY2oiaLVqx8=,tag:w8RTtsqR4Fuo6v8buwLvpw==,type:str]
-#ENC[AES256_GCM,data:hZFxFSJw2iP1AkzU+uF9Cz9dzV4ZUDJsAMDxFeK4axAdHtuM5g24XFoBtogtLFsMYfajuBr4NRkfBMOcD02kXmhKPvyUuPBEthy6N2obMqD2aVLHogTV,iv:Z6F9qPYsjqVZYl6brp3ZFkfi9aaJ/Pe6e1bCLbC/J8A=,tag:hQ4AlaBSsZhJ8m8BD3M54w==,type:comment]
-#ENC[AES256_GCM,data:h3XojUs4zhAraj58pJbcSBdRzuKIEStp1ZWrvvKlOuLlqpssiu9lNtKNrX4P3FHFqqDt+NeKOnr8N7j9Xz9/58OeJUl7Zd85dDEVjZiABqqwf2c+KT/vMs/NHEgr1kFTvvo3zlQSbkz1GgIqlnre0p3ctZd3mWghSx0g+g==,iv:iARZoF+zL2mwBXB7idARnEapz6PDU+ICP7N8aAewmp4=,tag:tNy/lr32y/LKNxY6nIoPZw==,type:comment]
-#ENC[AES256_GCM,data:dKMpQAfp8JumWTMTiy5mUIZN6uaSiQicwZqEv/2dLzZ2l5qFdMuIq52DSzPPjHPEdBF2LC23FI+t5Efsqz1gVFfK1lY381WL0sz3e9vBVNk=,iv:oSxzXbuqSyXafAX+NPkz/xaxIaVk2/8icSMk0+krQ9k=,tag:1GdY1wDomHlmGe821v0PBw==,type:comment]
-#ENC[AES256_GCM,data:NCoKDzH8WXA/W2CX97m2h7AbehvEKGIlGqLBMJgChKATdADnAJ78/LyhqDC4TZLYIBouHA1i,iv:CdtVkKmRXIJhGBJr9f5+KqMkvPA7suhzClcikzwSzgQ=,tag:BTaKSGmGsuB20Lv572iqRg==,type:comment]
-DDNS_URL: ENC[AES256_GCM,data:f8q7C8xj8cxOtI89H4w=,iv:1PYltA8Ttz4iqMdsvSoqpz8zCq65So/UlOUHMcyqvlE=,tag:gXZKOwMSS0JQku/OuQ9y7A==,type:str]
-DOMAIN_0: ENC[AES256_GCM,data:jNmzbtwfvJiX9hVn,iv:/9wyVKprxgEGTmhkTjM19b+8idz+sOIz4wsgwSWP/dA=,tag:LBbbYS7jGcXy09T+Zu12nw==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:ICcl/jz9stYdwC5uNeYRYIk=,iv:2tTzMIRMo3RdkluaqoglrWeO+U+4hGFCFXvofWUp/PY=,tag:nyvx4p0OV9VI27QQSHP3mg==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:R6hgjIRHRZjdbqJNwNDdN1rZK7O8AsCGbZXS+w+oEcCPDBxU6/N7Lw==,iv:hp/EYLSz6vFUJH+hYGL3Cq90xXSRTxmysLexwfCXro8=,tag:O95mdh8Cr1cZQ2qp3xG/gA==,type:str]
-DOMAIN_0_CLOUDFLARE_API_KEY: ENC[AES256_GCM,data:7t8WDi22HYkJXQ7tJAGb4vqkYEf2X0xOAxL1+sjojKk1kJYVPA==,iv:j0/Z4KuqNZJvIe9IivYz9VGHh6pvCXqzvkef/0i4nVI=,tag:NmCm/ZLtWbkOWSWwRrsSdQ==,type:str]
-#ENC[AES256_GCM,data:gg8GIo4IM3jWUTzLz2+pQfYt1VUl26SL/BmnbVi3Wx/03+d6FAfGXMd9d8AVQ1cd2WZFErUSuXc=,iv:Gn8ycLx33VoLkwSuAFN3AXqxn7QW9GTgtnmodLOlipc=,tag:NDjju3MmAds4KodJeKDPcg==,type:comment]
-#ENC[AES256_GCM,data:NQecsuZvxMYUSlxTbAAOWvpugn0anJpHjA==,iv:81EdpOHuvQBijgue2fUtgiW+nFIOWIxh+jzyQ6FT1x0=,tag:Asxb/Jo5fC/XEq0DOaihKQ==,type:comment]
-#ENC[AES256_GCM,data:VCJssQ74lKAVciInAZ0IFzmJ02vpuDtK0dfQBgjHnHZ/ZmFeDJbPGeKlCj33iDSZ5WkNXJCObELOrVrXWJEUEFJtEdt/IKfdywdkjbc=,iv:KuNmIDSWjlSnkYTZjoR09xC78MOWkxAMzA3xkVg8hNM=,tag:2E4yPstjqs2CtGOAJlCdZw==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:N0nsR9V5cWlTtqlAdR3cPBvSjFm3YayqCLa7tQ/8cEJXAe0B71q173lFso4GfRQA,iv:KGkuHPIDnUA58MICvyGfTkQCjcfNTAgAHTxYlKib9c0=,tag:0ocpanclzmB9lUbg/tV8mg==,type:str]
-#ENC[AES256_GCM,data:69lVQOm3Di8GDCOZUMP7gGYCpohlZjHrqqgObJsawqlmnID6hMh63tykm/+wyoMo77wAAQ9dFr1+y0t/d4lxrFIUak4XhFg=,iv:o7V7B9M1MRA1xuRMRui8abM34HiorAGabTMLw3u3VXE=,tag:Nb9y6yPsTOxukfATQHIKbw==,type:comment]
-#ENC[AES256_GCM,data:KXQV9YKNOfZQxuGUwi2Peo/1tH4UZrFdmidFcFf3e8BnsH3dlsGTZdsmdfe9sQVl+K67tydl,iv:/Tv2FRD3Yn+7OiHF3zua9m92Iw3EycfTWZpRIMQUI/M=,tag:yRl0WGQeAWkE9wrfxA1kcw==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:8ypwwbFGOA==,iv:Zun59S6/e7cBzxHgF+PC2/7ZFhw5617d4+FIQoz2QOA=,tag:6eXKJvcWIzmhVabBBwr61g==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:WB5aA3Jt2YPHSTuvDg1AvZCejDM=,iv:H6GBHdzgMtLjPWWGXUOPLDv0dCJ6WCVZCxehioM2bQg=,tag:F6aL5RmkFak1vhd4V6/G4A==,type:str]
-#ENC[AES256_GCM,data:cK3ZNIqA25D6WFOzQtA=,iv:K1PmXSl2lyv5ypZ08+/0RnPd/dxfUmenvz3tJAv8lto=,tag:P9iHPMNxXC28THGuzBCGcQ==,type:comment]
-PODNET: ENC[AES256_GCM,data:DHKrZ0pIhtCrgwBhAQ==,iv:db0FHuXF0s2+C3IRDvP2o54/ge6RR0mH/9Od7mZOXh0=,tag:Z2iBCxYhMJ2TJWXG1BJwbQ==,type:str]
-SVCNET: ENC[AES256_GCM,data:CUFoMSoeH8ZYafIJwA==,iv:zuakR6phW1G2uSls3jUsUtiQQwZcLFgGPKUsrYBKVFg=,tag:n/0KRWd0pGphE8L9sXZbmw==,type:str]
+#ENC[AES256_GCM,data:qQbv0mlDdOSQv5aVGOtXVhg1k/l0auOYKUYQdrzZj2PEP9EXXFhOjacQ9H61L8NUFxk9DJIrAoqfJ2WQBOQWrz8=,iv:pdp6dwkvopVRWRU0+axgXpEYi5EnsjmmqC4N7FuF6C4=,tag:sQ0A0tFpm2h5JrQVJqq0lA==,type:comment]
+#ENC[AES256_GCM,data:+JrSVegZvw7BOkwhiY0lDb22f0ZtSp0xcuWEO4fanbGjD4tP42uLMzGBzXg=,iv:WLo4hlbWztg2rqhSf+emPyHUIGGnVn4KNcJIWLJTeII=,tag:B0pLfcdacQTsy1fBhgPzDQ==,type:comment]
+VIP: ENC[AES256_GCM,data:rPGetEIFknFF40BsBQ==,iv:CLeTpiuSBrKVWz0jxz6JvMMfMjIPPk0JuGGDAqMXCTI=,tag:RbVAiu/o3QoZb/W6uT/Ciw==,type:str]
+#ENC[AES256_GCM,data:+ncGafvEHA8+saAbVdxEJM83inPFapVHkdrz,iv:nOSj7de+6fydrcGaqr/A9cXQpU7fqkxoA87TnjISRPU=,tag:YbxnMWnRpgHDcjnYHPwJPA==,type:comment]
+#ENC[AES256_GCM,data:fRumR5vab/lxyGULmwM+pHEYT6azLw5QCoE7K14etI6y/RkfkDSTKZXOgJevDQmZB02HcGT6uvIMmpxtHgdABTMtv1A9kGW40hernuURz9/1ipl06vFfby4=,iv:wxMC/QOhuQDjbl5jThqwfScJUS07ze/211vYmAr44KQ=,tag:SU9rWkS6j7cvrCV6GJZg0g==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:c5mwXt9S+pW9D8k9+0Q=,iv:jfO54UjapaIwD0Si/6uL/Rf8yPPE3t5BcVsAXtcxNLY=,tag:+8cFOBk6UplXggz4t7scKg==,type:str]
+#ENC[AES256_GCM,data:o50cqj6XEbdlOEh7sx/l0ItWJEWKqVxz97B6qfVFuVzT1Q==,iv:I0vOp69i1WDHDo8qhCaItd11geagiggQV8I919PgnS8=,tag:AzHcIY3VeEkoyiaS2Dh5YQ==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:GfXNkOQ9iWBB0A9H6w==,iv:cgs5DjGyHjMj4n4XzJHDsUWAvjSe3D7054paVspcvhk=,tag:C5/nUTOpvafYo46dineyHg==,type:str]
+#ENC[AES256_GCM,data:PDOh2Jobsuw3GRMVqKig3QdmGQFcwwYP2afvJ84DoaSruWsaNr30WVGBmzkycYM=,iv:ArZxJephRwF3b6t90D9kHVGJftQXwDn4U9YSDuRdQSU=,tag:Xv6u32FutyOtMFZ0/eo3bQ==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:JD1/upoMM2ETw/4y6VFJkpT7QOvKRcWEIn1XGYuNiQ==,iv:6/+MEr6cZ4Kzap9QftIyK4d0GspIijRNyidrXdNypZ0=,tag:mxhbU70dy2YRLtinEEPWNQ==,type:str]
+#ENC[AES256_GCM,data:McztMuzdKLwjRNc9Sw2bfkrD4DjPlmHjD4zut7Re9HEyMWyYto9f/eX8ER7sXkGZXJarEpdChzr1YJoz2XGVVPZLQvMJyqLG4i9hbC1Nq+NFPg==,iv:tzc+yvo9a9Cc4aQRPbmPCZe4TSOYxUQnpUqSyPfxnwg=,tag:uLW9MMcK0bMyEXW/7sFstg==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:NiFvm+peApnRlggmHq7c,iv:3V3dxqWDMmhFm21u4iZ4ySVh3Lo0rFCEyuaQdbNqOHc=,tag:vJ04Mh5BA0WAyZSXrn98kg==,type:str]
+#ENC[AES256_GCM,data:5euSBdclEMLwF1q/tGoxg7guWuCsIFHs9BXJ6QkeP0Lu,iv:1INd7ZDtM54s2NYS1kqUV4E0gQN2WC4ln4739GKHH+4=,tag:ldOj8J9IEl1jjTeNfdzafw==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:rhzztTM9ssm1Cw/U1DiR,iv:iqAQ48buIjixkhqWAdqoGzkzvSUHjDO04C3+AIIG5G8=,tag:XVjBXtmF17p01D0MDAmu2A==,type:str]
+#ENC[AES256_GCM,data:7lTaPItG8yOffu+H4Jg3Umn6emr4sd+7pucLlmB7CJdJ7tN167my9BZ3+FbBAS/E8obrwCfUWuHPJTFf4NuS5z+OksE4rNgCSAjrKgW41rk=,iv:atxFx+eOUuul7/SWmJ4w377g9v/Qm95kSjcn4KYWuwA=,tag:V1YP+0WZ8P8ECVkNtln4/Q==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:dPOm/kiTan64pGALaskq,iv:DpjufYMouS0p/ObgUv25malIYmlaTajJvwtzPMmkHRI=,tag:1PK6zLYiMXPxneO8blvLuw==,type:str]
+#ENC[AES256_GCM,data:7oetKbNozca54GoWLKdp1neDrpcJSm9DsjamTjLHW5ik68WWg2bvJmseLIyAPSA1lubRRwT/cG3OLYVdlEbcKzbdYo7dY+jRLvHvaCWhmwGQsqrbtGKw,iv:7EEUGPwn0wVTVA4glQca6qp2EPQTkN4QoTrBj+yJqFM=,tag:MDlFDJsCihNJZECIYpPVIg==,type:comment]
+#ENC[AES256_GCM,data:GMFCCP+S//xQDhxT8WqMmMNDm5DjU7jFj3RInRj8EUkbKF+Yp5vmprHzP4h7KNI6arciB0TKwKcXnU7QmZuGmowR6kRvuTQ0piyKXFn0f0CRQvBEwr6t0unrWJ47sGORkK6MS1H9EkDF+RC/jqBMWxbc3tLwdxm31eUPvA==,iv:FMDovjbWSwTVWtHMYktqhMv+XjZrJB4Nj1EX4sYLUfQ=,tag:ZPjlIZMzPd38kLtuX/Tk7w==,type:comment]
+#ENC[AES256_GCM,data:6juTAKXlc/SiuqHUbt37u9QfclQZoMmAc5fKU6Jv2IXRUZLg2yv33nM047dUp3YPVChMdTiN/aG8/1LAHoE5m8Us5pTfVKG+t2KuTaxkWH8=,iv:rUq5PC67RftETugg2IheNvXfZ065Sr8pdrv6PpAatu4=,tag:XfUA8QIyv3oUD6E6dbD/Gw==,type:comment]
+#ENC[AES256_GCM,data:pIZJCWHrOFD0qPIH7TEOyvW4158pganb8jNEdYEssxjNUWA8c9Xyp6wFsUzbdYcY+iHInwzg,iv:yPMlf95LoqrjfjG8VQjCg4iHeX83iLZm0d3POlSopH8=,tag:zwF/JKVc/SMH/W7eLYMl+A==,type:comment]
+DDNS_URL: ENC[AES256_GCM,data:rL3xAzJsl+rPP5mII20=,iv:KCnfparys2kGDQE0chyYyFo4b/Tj00PSCIpQAYSBXsk=,tag:4M0kR1vnZ8l5laymQ6lpsQ==,type:str]
+DOMAIN_0: ENC[AES256_GCM,data:C/W/t5j8XZN+UgpK,iv:Zj17QelTPdCnXhsU8+ABlxQsbwdEkzQycaYqNU/p4Ok=,tag:DVltnHEal46k3RRXrGHclw==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:T9rOqUZWdiFpwCA0/Jqnlio=,iv:tWp7M4dNzPGfxPNpbogxAMyo4I0D7cV4sVdzj4pKOq4=,tag:NzFockSCnrZQDQabQLKt8A==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:1ZTAxHdVnuMPyOGa3/Q2BBIiPi+GjGsYIb81N+/o5zgYtNb3/YbLEw==,iv:JoLYJ2O0LcOA43bUbwlYLpJMHso3zQyiit5tCrc01jo=,tag:PXbj3NrA2PWg6uKOe55Eag==,type:str]
+DOMAIN_0_CLOUDFLARE_API_KEY: ENC[AES256_GCM,data:CKR+xirMcOsvYPf2bMjcxr6wjh3zpWfbEOiNSi9uXVtnrIvZbg==,iv:b0+D5fuWc3Wg9FyA2jwQdjVrH7WhMyWJ1MK4rC4dxsg=,tag:3Gm5Ysqut1WOqd8W8kxIrQ==,type:str]
+#ENC[AES256_GCM,data:9QgiFr/SBFB+k0CCgBKsmixninxO67q+3WIhA0YDB7NbdQAPyb7yeJ85NazlCc29hffUaWloZ90=,iv:NFzg9outyYsG+uXgIIjsH88AsT6jJKhAiECpZ1K5PJg=,tag:scpqSWo1hzf4bVS/7atqcA==,type:comment]
+#ENC[AES256_GCM,data:xu3iE0KSECFHbm7UPvXJxwpDz0sdTMqJig==,iv:5o43MchQvFWG2btG1AX0xQZaw11Y91HVRlFf8KEO1gM=,tag:ywRaT8BrDaIM+PeOpXzVrA==,type:comment]
+#ENC[AES256_GCM,data:nO8jcHjcPDYsq6wGjPsfR/d/DPchsEuI2pWYh26PZkcrMnEQuHtrQOlUKZd0snT9XKAf3j7GLAk2keDNImXFAVPKAR5Hyp91PnQjZRI=,iv:IL9hMp+buCF1Jcn015nWQs/5THyJpOOyvKy/nA+Nyi0=,tag:V172aGfCp1bH656Iyuy5bg==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:0/OSq28ihZZN+oNSVlEDf2OLJuByb/AWk2MI3xfcjhge7H07zlY5POulAmkXzHJ4,iv:8ej28NTE/fjZqtgeb2bg5IS3P/s4oinRZDSR1n0jQj8=,tag:PSkezUezHW8EZ769nDnTFQ==,type:str]
+#ENC[AES256_GCM,data:HWIvQ3Cv0G6QerzZIn7WVj1QgMgSBeAyE70qrd57CWVX660VtGM9iIqjcxOfCEvh2xpBjYIE+Ekaija+cTDb2eLsKruiKBY=,iv:ZJDozkZIk+/3UHGu37x3hhrnXdYxvS2g0TVnKGMJqTI=,tag:s7BDW3p5ajvRC+o6DoWrUQ==,type:comment]
+#ENC[AES256_GCM,data:E6d5JgDO3NB6ldZxYJyUUc0QtuO39pMWPpr5j9ioMOqFqY+Nz6r1qnW4b/fc2azF2QIYJQFL,iv:L2uQaAX6FBQIoB7vqsBtRxDn+fIqyVXEx05M8C5snIk=,tag:6NyB1Vogr5D9pRRIu71UDg==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:usFCmYNI9w==,iv:+uu/gZtsgvy97lbaLgK2JGirvZlhV+jsoqFbioqZGZU=,tag:KRH7V6Zat4q+8Tk2FxywWg==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:5cKGwF1pJbmdM8sdHXlKTTcakxI=,iv:nMdAFcuKjNzo8jOEQAtAX5xi79PBGHoC8CYVQFOqIRM=,tag:BatCYmiWPUvQeq9n6WRSOg==,type:str]
+#ENC[AES256_GCM,data:1pmwiSlY/A/irZHDRuQ=,iv:68kGFZWFkRfme+6XFj95Qx7RrszvufcDVqBdJGLnBvM=,tag:4M24Bx4NHnZcpMeivgWBrQ==,type:comment]
+PODNET: ENC[AES256_GCM,data:y1Bx3y/bS0xNWziEGA==,iv:joGsHbV508ocIbag3qDkbvHFxrQlL1v8b2NOFN3lHII=,tag:mtwdEjqDQ1l52QlxrefEOA==,type:str]
+SVCNET: ENC[AES256_GCM,data:M7rAwUamvotDL1yyPg==,iv:tRgaZqlkKb5eFwQJ/N5hprlQzvljuDAJIjyA+Ocj1Kw=,tag:14qCecVry4ljd7f4BEbDqw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -44,13 +44,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoc1dpMnNPMFRId3ZWMWtJ
-            SUN4Y3FRTlpRRktCbWFkWGNMN1F0ODB0QlFvCmJxS3hYQ3Flakl0MnF2NGRwQkdI
-            WEh4TFZLeEw5US9SYnpVbnN6VW1ISjQKLS0tIHVrSmM2OThvK3E1cFdGcTY1b2ln
-            Uk50TVY5R3pSU2p4eFNQeTFiL0lvQ2cK0WyuwvdJnJGzvcBuhVunv+dFFCaOu+fa
-            tEH2wN3gVk8LuIPDnznpX19zUUUdbmRf9Vixe9xIuzSWj3azoezejw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSNmNybjRxbWxiQ0RLR2lk
+            K0xscUNoMmZKU2Z5NGZmTE5yYzVVaFBEWVU4CjdmZlIrS0xBSlNUS1hPOWlHR252
+            Tm4yQjFhNER3ZjRacGdUeURmQmErZjgKLS0tIGhsZzgvWjV4bzkrSjBRS2o1dWlq
+            UGlsckF2MUhmUTltVGpaYjZBMjNoc1EK1qDedHOwHjzZxs4e0h35olR0bOYNQW+j
+            wKeebfTAOSdPY2P5k7XYQ3n8T9NB7gJ3+figa4dcCM5bHRMPoLVZVQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-29T21:10:14Z"
-    mac: ENC[AES256_GCM,data:wTULHyEk5BAAKZSnI2LDywtc8nDiVBePVXLJ0Wbf5OIONj5Rtqko8ma5mQjHYuXVh/dyx5d5mdG8K0kUZKU76OV7FoW/onkzmY5LuJvgHl/AlO0lCJ88TcHSrALOUvA7etQ0xKkaxB/RENk6oIeSJg2/Ezymj/qavbKVEc+AzEQ=,iv:t7HrzrITQFaxNitVU8QMvRfYIcRKAFzYxE8dM0rpdOY=,tag:pxXcm/b+q8Gon2vs4TnL7Q==,type:str]
+    lastmodified: "2024-12-29T21:23:26Z"
+    mac: ENC[AES256_GCM,data:CBLs9CqpTs37vlYMk5TXvkr6QhcpCiF+q7ZWxN89ovpNYW/GQQ42yKUcWPks2P6xr8ryVGBjej0IbF/cPalCp2r8xwSfeqh9zkeuxLYADjByY+27qbuWLt+zvBP78GcGl8nYvqZ69yiqMbcD1hFmfwzSHOnOXp/zEvbLYK3yJFY=,iv:CRCgJBtIkUUtgZi5fdAUkozNPDxXQDN578fze1gby28=,tag:mhPu9M2BNPGg0BMeJ9404A==,type:str]
     pgp: []
     version: 3.9.1
