--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,43 +4,43 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:XKmBaTsCAX1gccWiz+dwNnrldmrp9T7UzpK9QUOPOIO1cqe4Exx8JQ1Kz9uV8G57GbkM4Cdvrz5v90Oql/Fa96Q=,iv:YQpnXe1sh1qoSV9DPK77b8HBdOCXXfoPMnS2aLrf8po=,tag:fXl7oFaq3RqQWyyePcjYNw==,type:comment]
-    #ENC[AES256_GCM,data:HiNFaqddfhFU8CcjLUj0EUh7grwJ61uJ+58gaoNBSloTFoUA42ZXce6bBG0=,iv:+nuuYUrmXfByxCfOlMocBauNVuBornQW/vZ0hovVb0E=,tag:21mc/qaPgtsIQibC8+PmXw==,type:comment]
-    VIP: ENC[AES256_GCM,data:BxMPo3eDta2Js378Cg==,iv:/JELLBclczVLhmuVRHL8naz9fh6xMEgFED5orPKs6Ag=,tag:8Olf/XoU0Kh6wD6GW8Kwew==,type:str]
-    #ENC[AES256_GCM,data:IZgB3EfXr2m85bEXkTqRI+i/qHw2jI0nmp2r,iv:9du3IAJBQXkwmwKQoGs/l4d+Kg8paxTt+PlVy5JBsrU=,tag:7FfY61J/XG+nVdGo+k9W6g==,type:comment]
-    #ENC[AES256_GCM,data:EHyIurh2iJpdgAvXAXsHHj+1P6h7xXQzs9t96tGe6H0uVqlnJt8VnN0OIYM9BLt5Ry/mfbwVQ5BhZsTbyWozRGfxM7lCy7IfvJV0u/US2IyFpIsGGVNlBw8=,iv:HAimkz01QJU8QY9j4Ag1uIwszkEKhD8S5oQF7BNumQ8=,tag:ANFoxK7673le9FiPA+3bzQ==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:+M9h16GFiRsz1T9p77s=,iv:S0hRhca2tcFjn42FH0MYlEK1szQEft3prumtA3HTuc8=,tag:7hjC7vv4mkbirqP5KhxeBg==,type:str]
-    #ENC[AES256_GCM,data:Sl0xa4N3TjwxdWaKDQJSHxjkFgWcBJhDVMk0wjRQXz6JDQ==,iv:fIvGpWgijighcgJimVruOoN3Nlgkc4F2RLsQ/6oK4Fk=,tag:UOsHdWIwt6ukEUsDDx2t+Q==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:Xhgk8kfeEVykhv9HHw==,iv:nWn+fxdaO6CFhK+v5BhbGe8vBwAlfE2BWjgEOW+PaFI=,tag:5jTGy2rNr/y59TsCchI2OA==,type:str]
-    #ENC[AES256_GCM,data:MvykpNLx2Sz/uKcfIhDhxPE5GtkvbO/v5FIuoo0sxQdOF9OK6eeKuquEtgJA26Y=,iv:r+aC8IKxHbHaTg1+m9TOFZWs/np6lxHhTgc8MnV74Vo=,tag:n1UwC8MmXnSDdHRIGItqIQ==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:6D44GuQEyB4nJYL2IHAo9XbYWtucFxNXpDPRttzzBw==,iv:Ox3MMbt9erGR4SYqhUPWZDnAvqoHJr2risNrJIYthQo=,tag:e6p2AC3s9cdPs1slVpXrFg==,type:str]
-    #ENC[AES256_GCM,data:m5BCx/i0uACDwqv1I0N1cI9CEBmtsY3Tvtyc88LGfTEdfq1vUgNbNL0muZ66siFezAbMK8P4ruDY4k5uAxcXJDmlZEBZChKMqR/qweVwYuE3Fg==,iv:5/Xim+lxgeQvCSwBN6IyXmirch9u7UQUyihWp76oSXw=,tag:Bhv/qzcJPsXeqi20hZVuNQ==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:zWADuOtyUTxA9lrGzzYS,iv:2DnO989rD3QamTDTcK+kf4dXU4iWoloPxW4z718ahYs=,tag:V8s3LIhd9qHXW8ZheEaFYg==,type:str]
-    #ENC[AES256_GCM,data:9oLycEMKrjdurBhfw3GtE0f2ZQkA/7IeDQ3bNHRwGXUK,iv:BAQSDFdVKU1Qen2knmXskkb/skT4KWPO0qP27Q+Rewc=,tag:1OxRHXK11PbDR74C8T81Kg==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:Jd8s4RV6hWFK0Bb/NSnw,iv:+3tkuapf9603atBgfHWHUYc9xDZRQGpHXHPyasz9Nd8=,tag:/m7Bib0QI7TLwFk2jiMkRQ==,type:str]
-    #ENC[AES256_GCM,data:qeJCqPNHUfld07Fvw4Ms6yBBlsmNnqQjlseqe8N5ZKLRKrpwv63rrmAX+x5iU3Vz972Va4TZZFruhMyRJbKK70YQAhGQ/dHt1QKp//QUcP8=,iv:rGOX42iCklxnxXO5skC9iANShzZ0Vcs2GoKljXefpGc=,tag:UkIHYFfGhyYekEuDguOazA==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:suxzsJuHd//TolnAZaMj,iv:z997PEmPsK6eRN+EDdOY076yPOO4z/LxDzb0/8U4R5M=,tag:naNM1xf2UrhfJLF7VOWGXQ==,type:str]
-    #ENC[AES256_GCM,data:S20Lv1CFDlttKzrIYdfFi0/unVyhL3I7p4jq7tIvyQPTVOFscuvL0edizbaiRumZF9e2b7c4DDHnL37fdDorWrC6VcKXbLrILwoAplc0GwmEmUq5mNTs,iv:/OF6NwtM9e65Wq0WSAxbLiYdx6kj7AoeF0xSWmLJXQE=,tag:Gok3VMt6zSdUJQcJvAU1/g==,type:comment]
-    #ENC[AES256_GCM,data:edqvYhAWP8Ot/V13HiL0dEVbDJUcTa0LzpUPjvHWZoBP6tkPGlyZcWFknclZ/EZLvPagB0XgSrSGYkPH8pj4vLyP9ahpT79jblWStdsEpTH1ecPgb00WBk3PK6XLSMUzd+8kkx89IFmdtIBhoxpPtjuwOJw/iMZQqX9hPg==,iv:VTO+lkVPi7nk4kPFNhctqOdqC817PFYWJViiT5eRCuM=,tag:wBJ0t354Hm/P1sAInuCHDg==,type:comment]
-    #ENC[AES256_GCM,data:AAEEAb+XyQw4do6+C8KCtb+lO6revQ7hjNqLgi37q4X74ECg3exZhV3mh4tkn2Blq7jmpLDhj8p984XRCZ9OrZs6blk7QUxdSrfLgFNXhXI=,iv:s5jul9zGpaHoREsFCy5dhtmaUYSnAQk3KIyILmdL07M=,tag:5BZiszGn8yeIG0rzRNnthA==,type:comment]
-    #ENC[AES256_GCM,data:Me1EmKSoclE/B4rxWvDpSIh6r6Ex4p/6PXvY3/SWjOIEtTW13QsKb5XTANq2Ze0uuvh40MAA,iv:GordzMiDK+fG3nCDsWk34UmED8Bn3l89/NiFSo7dBU8=,tag:Ck5nXVT155yq66JSfTTSTQ==,type:comment]
-    DDNS_URL: ENC[AES256_GCM,data:1TCvfcAMK1VGQHexV5E=,iv:9rM9Db1+7QrS3GgM1tyZxQ7hjsq2/iRT2fwjfpnN6N4=,tag:1lvCGPBd1QBJhTrzX63kzQ==,type:str]
-    DOMAIN_0: ENC[AES256_GCM,data:S/bVfyBNpipZ2y/1,iv:WFt3SthrfCIBrNplJoOsP8lFszudbbDPujLhSGYjWkA=,tag:N0WqwdwyH+pPxpMW+2twBg==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:64pPNA0XssgptJTshFKGNxg=,iv:q6Z3M/+c5A85AfBy/tTyhfLP4BG04cLL8krbKC30UJs=,tag:CJ3xfK6vSbW/rHo5korQzA==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:vanY9ewT5hl6mhN9bpItuc7uMO3Xr7Hbb2V8yZG6PrIolKIZIi62AA==,iv:swl79IKG3HRVhVB/Ic22c7TNnTMp2lHNnTo2CZdyKbo=,tag:c5lWt4jeoUPaRAo/I2Mm7A==,type:str]
-    DOMAIN_0_CLOUDFLARE_API_KEY: ENC[AES256_GCM,data:nm44DpNhSFUsfnTrw9iK+yqE5SSLhPkhMwDovjpJFnuRhkYQNw==,iv:jNgKO2biNguPWjNuKBdNRXb0M2uqQzQ6D1MW5Jt0Iy0=,tag:zsTMFh3EilQyOgd0CocUrQ==,type:str]
-    #ENC[AES256_GCM,data:KUkvlyz9TGHSpEAP+ntMTy2pV2RWoZdzM8tnnXGCssaGT7SxA0VDJTpo9XHM1COfHcYpZOOHJIA=,iv:zp4yhQcMJWYxO6mo9LgCGC9sQzI29tzWaShd18hHqtE=,tag:iiJOzY3m9OtoGmyzt7QX1A==,type:comment]
-    #ENC[AES256_GCM,data:v/N0gMWIa18nK3hEkO1VlTQ9S05zTjNrEA==,iv:+AGEBzXiM1+BdifCF8omR9o9km10QJ6Xyh0iRePxkHs=,tag:wNiQbgJ64lwqynKUeyfqaA==,type:comment]
-    #ENC[AES256_GCM,data:yaUdUjdxev6A1pBHzHpkkX8cPReoRFDzYIwiDZjyGAyOW85qa82BdZyt9c1ey8+OnVzVJgPCZ6cuh+n+IUyXU8mJJNlURb5uR089q+4=,iv:otJdzaCXKmELMZ43njgxrv/AWc2cOuISfxfERys8rFA=,tag:yY8ceOGsB8noYCz1AyRzMQ==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:INtPBBL3sDmMULuUCSJE+T505r1ysW1/D2Mciit2BHpB95hyLvGdYue2yJ9dKXDE,iv:GYmEzE/ZrRK0tQWvyCKCwKMTMQu0PXMyfPpxZ6VBe1E=,tag:11qL0m7kOMTzEweTjxd53Q==,type:str]
-    #ENC[AES256_GCM,data:eSjSZp0u0/LsSIPnsHy4JsPPvaamW1UKuBTE/v7QbmmpPd79nRCCsEnRp9mu0qoyjjSNhlyh3vl5CrBhs/aY/ylUqJ5O9o0=,iv:dXNUyw2iiPPmVSDIylG/KzC/YT/eKIS141zVM9SHqjk=,tag:cS/pmcLwfp+OdFcwmNmIyw==,type:comment]
-    #ENC[AES256_GCM,data:KGuNDyTWIMtxAsne4eUw4Zdhm3ynK+nWLl1UoDPUJk1CB28XybFFNwkuTHamviwxKFxaq9Yu,iv:9dC9BSeBqw8ybETc9mW093h1TmyxO9O0rsbBmYqt0WE=,tag:ZscXXrXh7dvKTpk+6AefbQ==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:zul1GXSjxQ==,iv:QZkWLqpTpw7TRr0JaGdCmC5pMLvPFmgHY2ttggLOltE=,tag:qbbAabCwBfCU626+e+qylg==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:/jVhXUaDwpo+qu1mf5NWjJq6k2g=,iv:p0ADIQsZI3A2kWdKfee2dOhyfD5mpgU5EG4QpaZfrGg=,tag:BoHIqnOeBoO1dwHRF+sOzw==,type:str]
-    #ENC[AES256_GCM,data:r1/TxEh6+7cJr2BqFnU=,iv:jn/AIG7GjwIf+1rtrky6t5u4pp/Ih+BC7PV2clU3tOU=,tag:aeD6Tzvtwz3F7imEoUXYJw==,type:comment]
-    PODNET: ENC[AES256_GCM,data:X725b97yh6AehKSGXQ==,iv:sImJjNX5M2qALauuSLiFlWIB6GsslshmJF8wNiRqR1Y=,tag:Vwt7i7T8GfJC1k0i2d8U8g==,type:str]
-    SVCNET: ENC[AES256_GCM,data:id5JfBH6Fsq3tnppDQ==,iv:J3s528efa4ZYu30mxzukOYDElNfHKJ2SbPePD3IqkWI=,tag:wNOlGdGp2UTESCF+Y21ILg==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:eXts/Q==,iv:vNi5vxsA5WTlogak3qDt/19bpPSm2mWvqy6NPxxKmO0=,tag:2m9wbxDKo2WqstCjkrVeqQ==,type:str]
+    #ENC[AES256_GCM,data:Fx45pOHQZZdNqbwzxtg+6HGXBD/DAct5vd9SBVV+wlTS+sdHynJjL73WmVjzP376yOAdtPG65YYdPuGXgloNnAY=,iv:/ObDmDCqcqHjd7d/GUeoXHl4WjYIti8hSSeyWPVd9fY=,tag:mUUnfk+Cteg7n85PYEAnxA==,type:comment]
+    #ENC[AES256_GCM,data:Sqsdxmsj7tOf5HAoeJCmfAq94NGQppUtOLFykEptZ05myigP6gFtNcR/cPU=,iv:bSKH6+Lrb3YjiDK6Ko9j5TibqNV5WmGerye0Ga49HUc=,tag:deGLhLMvJ03f4zJTgvB6IA==,type:comment]
+    VIP: ENC[AES256_GCM,data:+9VKHDs4PN9kxcHoZA==,iv:OCaMd5kkHE4o70UB592dlwMEqj1+xRjbUHJ5+lVzKr4=,tag:AlVvKtRRXK4LL8yq7qhULQ==,type:str]
+    #ENC[AES256_GCM,data:YkyHUf3BraXwCFRVzWHl0F7QABwHZbDgaFjU,iv:M2N4hRH6T6wI5kbP8JnNv28pcgS6d5EGwqEXkg+rlmk=,tag:h7Nac/ClsK7MDsCy+I+ARA==,type:comment]
+    #ENC[AES256_GCM,data:D0owMolmXVqorhk5y58SaCi/AYfDJvLkmBW4t5p2YZ8RTs8KwqWKKPvp4f1FgW48xRPccT3PONd0ZcwGll/OUpx55i+4SY4bnhsGNr8RXElBHTeNqWlqQlc=,iv:RU5NlQUdl2HCHQbKf990GLfIgB3pDXTgmPCwcRyR/B4=,tag:zyuaVQx8kr/22QgN3+G3aw==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:fEHIQeJUGBhfCVNKkJk=,iv:WJsMflPIPKrfeLfnbrg3J7A0YJ0wjmyTOIJMWettCTk=,tag:/jml9b8WrUB+Gl+FGbXZmw==,type:str]
+    #ENC[AES256_GCM,data:JBASWhjjIFNM/dE1TttgvDJpSS5682YITaBvQw8FhYm8Rg==,iv:uISFBwDLHXjkDcv8EX8AULq2XZdABlfF9U+5aftmp4Y=,tag:1OpYzBuKBincwyHFQr7Iig==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:BTaRE7Jz49oQsbkNCg==,iv:k3AKXs2MQuhvpklNMNjye9c/aKVovz+O1R1xPz3daQ8=,tag:1Zw+CYWTnM3tu/QX0UOC+w==,type:str]
+    #ENC[AES256_GCM,data:dFAQPz5RECEQWdg4QDTIgJIqqMlXYJVNBFj2QXF8e1GrXC76pPlc8gyUSBjAr/o=,iv:Ya/BhKkpZcfHTLz9qp18Zm6/Z6UH+pUq8d6pYRxbZGg=,tag:Dw1fXYWqxYOiPkWQsAf/3A==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:vTCBMQ8pxSgWA5hKtAH/PA+vWQmnDgknf5pEHp9IgA==,iv:wgc87eXhcrZWOrGDazN0rAGMr2eTV7idkFLgCxEc8KU=,tag:t+ckBi3gxq4nPRUW1mkyjg==,type:str]
+    #ENC[AES256_GCM,data:xYuvhrLkIIqsiJI9IgTZYPN+aVbTlytc/v+2cVr0qfFK2an+gMUN5aPYoR+mKJ5YeJyUJ9i4O6ApIeHeSo12L5GS3jhk5MNu/5xTGlruRwzkoQ==,iv:y+kYbS7OCW93cOBE4J0c4YIdWB14HqyRpDuFZ9DBwpI=,tag:JX8s5U7/XwFQtRymJ3IxNA==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:oBK/FFJyc8ty24fI040u,iv:LWd+kAwMj0ODT566fPdAeEOGBGatfyzQl0z08xsaD70=,tag:qa0P+9eo4ZS1/N2kWH4PMQ==,type:str]
+    #ENC[AES256_GCM,data:1ub6TDsEDDVYxqD1Y/trMwm0rxXIRkbx/1T74ehWqr1f,iv:/HNw1f67S/uZEmIQRaEpq2rJEfFI1mi0F6GN2uFdQQk=,tag:w8GZGOx3qDKTMaVN2UKTZQ==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:8vxH5A9YzTwSwMWTc0PN,iv:oCBRLrg4oyOMDv82JT+RSKTJUITwTpOjg8Nl0ChU4YI=,tag:JILob073B+ICuAsmdY8l4w==,type:str]
+    #ENC[AES256_GCM,data:qbIN2XGT8eu5VJRxrXblWR5g4SrCDIGLcWVlaPsXjEKqb0ZHP6qlCj4ldtn37goBcNe8Ow3O0rg57VuGvIXRmpOrdAsDyy/anJfBaRr34Cs=,iv:x7vZgkCfjjG1B/AS1cSFoPepg7ILfTbnkwdLBQinU7w=,tag:tXFYtzGUDw7Uwn0EMeoX4A==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:d0tYFfEOyPx2M59CRSaW,iv:CtYXOnYsF29kHZjFqZQUL4H9hEuidqPjFTwOoW+4JOQ=,tag:2TZcWUKDhtQ0zOeielb8dQ==,type:str]
+    #ENC[AES256_GCM,data:8bjg/0xpOhc7ISm0p0ChBVVgcDd+wuZNbqogglyZIgCj6jxoKCU3t3eA9IN7DuUYk6kJWxRQS9MsmUloXDNU26MJF2oDkEL3p4RP4m5+KJpt1f+ZTJYN,iv:RiFFj5p7AzGzsnpfCeQamHFMudWdboXTDu/MtiTn7Dw=,tag:nRg7UIyCI1zjm4n9L8gFJA==,type:comment]
+    #ENC[AES256_GCM,data:Z8mxBRMPujZZCoZAd7/kQP9JeWeITJt0QxJw+gIexfwM2bRDgFUnaFGJkNGmdql8bu+fnAsl45R8jc9kJGnPJUnx+WKaB/LP7cn6swvyEOrlCk4km/l13TZO2pzMCIW098hzjmP34dDj/KG1T8SJSebO+QgS2DoNwayyIA==,iv:7wkk6jl9wdX+XaYqjHNGRdwpsSg7N4Mb1dZcLRVq0hc=,tag:a4nwl9bnOXOKFtSfygd8tw==,type:comment]
+    #ENC[AES256_GCM,data:2Rlux/EuAbNVwejlwTOBvD+QcbttIAmk0xyTx9gB0RHNMu/dmo+2qCf0e8+ZEfUJvbH2bbA9A52loq8pBIQ12sY17XuYjfdoG8kv6qWcxk0=,iv:joZm1U6YQuL+onn0id0OAv3OChmT4e2eenFsH9ksnLU=,tag:TGMgj2ygyH6LC11wqbNSvA==,type:comment]
+    #ENC[AES256_GCM,data:Rv6iIjEJ41gY2ksLE/mzmFbfQRmTFeox8yPL+zkrao5ODeLqluJgxRr9cez5Xw+ce9xX86zt,iv:dCMLjkJmuWi6IPhq9QcT8+3T7G4KzODtCRo4hYXNEDg=,tag:lg+CTmTF8LRjR2tduJSCpA==,type:comment]
+    DDNS_URL: ENC[AES256_GCM,data:C7vcfe00mU68uCrGOSk=,iv:66brVlc1SsUi9VQ5rMVHpvzj9zZoJwRo7RO1HCGCKW0=,tag:mcgK2sUdc1WQpuCHQWvVeg==,type:str]
+    DOMAIN_0: ENC[AES256_GCM,data:e81iTpqJjHg3zJ+Y,iv:dHbMInofOXV8VXeEz08AzwtTZsUxQhu9iPmCV4K6Yy4=,tag:IE+zr36ZPre2sqcPW/52IQ==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:pT7qAT6z3ywqxQFxxaF4wJg=,iv:Z8Oua5SkADy2u5kvW4S4xJ9x1j61Di5+4fDz9/DOLy8=,tag:w9LA40T8euGhCONo0hY8yA==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:3BgfUw9wO07z2b8SJEqQVEcIvl61PX32M2+m8UANRivo6ugGIueWXA==,iv:CIhSeh/mKxG2wW5JmxwXP5Ivtn9Xmm2Gg8VDu/IaXis=,tag:8vq9gQEyjlrKOWdXXTDZqw==,type:str]
+    DOMAIN_0_CLOUDFLARE_API_KEY: ENC[AES256_GCM,data:0myLWTDvGK8Kqvj7FrP7BQ+uzSkNeehKfOcOu4uAsTL3kFuzKw==,iv:tfdJ6097CoK0ximQOoEATPEv7R1eXLYgQcIFgV+628w=,tag:bfgONkkSEv6pa/MIUAvocg==,type:str]
+    #ENC[AES256_GCM,data:KTGavq0FTH0WDhCcbqHJ3I8Em21Whpo/mk52bYa0tPNy7TQACVaMXH0VpKXcoqzw/i27CNBaleY=,iv:jyimCzWg5HO+PG14cMY4nXWAPsWIswHVyex4q34UtDk=,tag:6g+kMuZAIJYwmFq8CPQd5A==,type:comment]
+    #ENC[AES256_GCM,data:DtkaOa6hl7t5TyvTR+aBDt1LyGAb3BCN3Q==,iv:07S9tJVTfO/kHZ6mKFoKCIsojYFg4B4F5JhpTqzDrVk=,tag:3QvEJilibbxUw/Wj2KP+9w==,type:comment]
+    #ENC[AES256_GCM,data:6U4XegK7suGIe0Yf291QZzQgOkV9pJqvt1qudGD298NSm2HiKA/pUlHgntC46nOxeTTgyFaik8onIEwOr6Wov/hM1CMJLrlOYZudxsw=,iv:uzL6SkCZ1ZNGN+iBb9dFsinSrmDsGbRuSDoxW7WwfF8=,tag:N/AlQmKxMiceq7LcHK68PQ==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:iivEcr7ir0N1trAgbyWSbNEH3azYKRoT99oQ1UBPNeMk0VzNr+jm53kiyh6ZUDFI,iv:tkCF5tH0fWxbQaUUnwt0SyyrBS7DH3EocX9GT8PWDuM=,tag:m6Qe9JBdIyy5vXO4WS15IQ==,type:str]
+    #ENC[AES256_GCM,data:QYJkywNElxavvsuqTapM2Kki9wzzoLd+rnzewkc8co21wMsYt4XmgMM7Tr8KoWmyUIEBuUZToRKhrAyCfB9OLX/6mX4D5Zw=,iv:UG1Kidr70LAzLA5i4mOLC/AutrDEW7AssqGDiOfZk0M=,tag:sA6aHTZkyRHkCc/t9xv8Uw==,type:comment]
+    #ENC[AES256_GCM,data:QIs0b/1zoJZrSu6N7Qu6TyYlFHrNN0WbbRw5BVlVhYOBeSV0G0tWBSb9j9Iy4+9yzAn3Odnv,iv:70Y8D+XYVynCsfJyOAF7OGQ5dkJ7vhwyIZ2FBV6WeVw=,tag:e4kkGGWukark7fVnrPjSZA==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:yD8VeUA5DA==,iv:vbfWPYuXv5Qm2LRBkRUA6XNFKH4tZmOvea63pSnE3Xg=,tag:c7Rei7b/ylvP10nPYQ4Isw==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:yg7ga4igsenMeNXGbPsdUFXXhII=,iv:EazKoRXIOGftyZcJQu2D5TfPFNMJoYKmvrkltnOGVPw=,tag:yhKV3V0Y6qjDn+g32wo/AQ==,type:str]
+    #ENC[AES256_GCM,data:RG8k2pOM1lyTenrA02Y=,iv:uo7GVCQmetayBP2GB63v7PY8YLn2nwuy90ga+Tp2LcQ=,tag:gl/kLvgWn6NyZr2RUCWzug==,type:comment]
+    PODNET: ENC[AES256_GCM,data:ShQS1cH+vZuLy6+Qgw==,iv:tUNEtGpdAWnwuyqeBXnfks9HnSat1I3XdhGZgT86vC0=,tag:YzM3bg9b/WE4CjnUv72C9w==,type:str]
+    SVCNET: ENC[AES256_GCM,data:ckpxRTC9uuaEXT5S5Q==,iv:YNsvLd3wLHbCVpvEIa0sBBtf/oRsQVawZocdHCWsXaY=,tag:ZKM5XTWUzMTqVmXDfSqsRQ==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:S0QAvg==,iv:FHTQCGjpub/wVDY0NeqdROrN7D59PEJ1q6Av9/a+AAo=,tag:wE4j0jh38UVf4fdE6F0yhA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -51,14 +51,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3WTJDV1hobXNpTGhybkdy
-            eG8zK0dvL2d0NEtwdGg2ZmZPSUNDV3lKVW40CkJYVGw0NUdIdTgvRG56VFRRNXZD
-            T0t1ZEcrelNCYzJTSkxUM0hqbEJXNTgKLS0tIG5EdHl3VHR4bWhyMjJHcEMySnda
-            Qk1FbDU3MmhlRWFNVStnQyt2bkRXSDQKNIKyaoAcRVqGaf1EbM2ZaTs/4WtB5vn/
-            XL7GdCkL0ZoYoFrywE//A6aN4I6DJ9OlI/22swYEdW7rzVNVT8q6WQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVN2pvaHQvUlpTc0d0U0pQ
+            eGRsZXpwclVsNEwrVEUvS0JmODVTcDkxbUFRCnpZWkhiejRZbWZvc1owYTQ2WU5x
+            VmVpeXZsalVPc0xIemUzb2VTS0N6RkUKLS0tIHl5eVpqRGpaUWVZaS9KS1hQNnpx
+            UmVrQlVEdFBuVjRURFFRY2l1dlcxdDAKCaAYBmzd1HpsOLkB63Lfrthkw0+7hkHU
+            jIYhu4BWWx33LaW6lYivsqP0jyGu+cIUyFrrccmzF3Qqqsk8Lhq1Hw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-29T21:10:14Z"
-    mac: ENC[AES256_GCM,data:igzN3pf8ZPfgpAFYi2YOoIUgjaY6msX/vGwA2pDdQNxW/NATaumVoIIPno4jq3E58MEbW95iIR5qpOpKqxJnRL43ntLE/kHI7D6nnXE1I0nCfyJ7D63iM2NO0YqpGcPiYnO3AMJV8QgREuieRhmnorMDG167LQ0fO+T5cfy/K40=,iv:t22TshLBFK6XJ36eRnN6jwgEBORiw9W1h1ukbG9RNE4=,tag:WY0d6RPxF/LykwvkJLwt7g==,type:str]
+    lastmodified: "2024-12-29T21:23:26Z"
+    mac: ENC[AES256_GCM,data:hKlmlh5fnNVpsBpxXvP8mr4qryO2+0V/MNpK3LS03T+SZxRnAFJ3Z4njyfQ0uKN/0GLG6SblZrMgDdaRhhPMueBKEdy43S9PVJ7YNPjOttQe69Z3t16xvwXDTOuGTbSuy6UnyNMwsbbD8rRc2Dx3FFefKfiBWPXZnLPdXnXyWvY=,iv:+kW0BfeeVR9u5OWFodO94bpLJpqpPSFCHU5QEixRfeE=,tag:DYHrW/h8qAJjQfPrL6F2JQ==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
